--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <P>Fronted Developers at Gomium It Soloution PVT. LTD</P>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur atque delectus nesciunt veritatis dolorem eum, assumenda in ad animi ea distinctio odit optio sint cum, nisi fuga facere dolorum veniam?</p>
                 <div class="mt-5">
-                <a class="btn2 me-3" href="img/ahadqureshi.pdf"  download="img/ahadqureshi.pdf">Download CV</a>
+                <a class="btn2 me-3" href="ahadqureshi.pdf"  download="img/ahadqureshi.pdf">Download CV</a>
                 <a href="tel:6395130944" class="btn " type="submit">Let's Talk</a>
                </div>
             </div>
@@ -72,7 +72,7 @@
             </div>
 
             <div class="col-lg-6 align-self-center text-center ahad2-img margin-top-bottom">
-              <div class="img-div">  <img src="img/ahad.jpg" alt="" class="img-fluid ahad-img"></div>
+              <div class="img-div">  <img src="ahad.jpg" alt="" class="img-fluid ahad-img"></div>
                
             </div>
         </div>
@@ -91,7 +91,7 @@
             <div class="row">
 
                 <div class="col-lg-6">
-                    <img src="img/ahad3img.png" alt="" class="img-fluid">
+                    <img src="ahad3img.png" alt="" class="img-fluid">
                 </div>
 
                 <div class="col-lg-6 align-self-center">
@@ -132,7 +132,7 @@
 
           <div class="col-lg-4">
             <figure>
-              <img src="img/web developmemt.jpg" alt="Mountains" >
+              <img src="web developmemt.jpg" alt="Mountains" >
               <figcaption>
                <h3>Web Development</h3> 
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus, aut!</p>
@@ -143,7 +143,7 @@
 
           <div class="col-lg-4">
             <figure>
-              <img src="img/uiux.jpg" alt="Mountains" >
+              <img src="uiux.jpg" alt="Mountains" >
               <figcaption>
                 <h3>UI/UX Design</h3> 
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus, aut!</p>
@@ -153,7 +153,7 @@
 
           <div class="col-lg-4">
             <figure>
-              <img src="img/web design.jpg" alt="Mountains" >
+              <img src="web design.jpg" alt="Mountains" >
               <figcaption> <h3>Web Designing</h3> 
                 <p>Lo
                   rem ipsum dolor sit, amet consectetur adipisicing elit. Minus, rem ipsum dolor sit, amet consectetur adipisicing elit. Minus, aut!</p>
@@ -270,23 +270,23 @@
             <div class="col-lg-6">
 
               <video controls width="100%" height="100%" autoplay loop  preload>
-                <source src="img/XYZ consultant - Google Chrome 2023-10-03 17-36-39.mp4" type="video/webm"   />
-                <source src="img/XYZ consultant - Google Chrome 2023-10-03 17-36-39.mp4" type="video/mp4"   preload /> 
+                <source src="XYZ consultant - Google Chrome 2023-10-03 17-36-39.mp4" type="video/webm"   />
+                <source src="XYZ consultant - Google Chrome 2023-10-03 17-36-39.mp4" type="video/mp4"   preload /> 
               </video>
               
             </div>
 
             <div class="col-lg-6">
               <video controls width="100%" height="100%" autoplay loop  preload>
-                <source src="img/JRP India - Get Your Dream Job - Google Chrome 2023-10-06 09-57-20.mp4" type="video/webm"   />
-                <source src="img/JRP India - Get Your Dream Job - Google Chrome 2023-10-06 09-57-20.mp4" type="video/mp4"   preload /> 
+                <source src="JRP India - Get Your Dream Job - Google Chrome 2023-10-06 09-57-20.mp4" type="video/webm"   />
+                <source src="JRP India - Get Your Dream Job - Google Chrome 2023-10-06 09-57-20.mp4" type="video/mp4"   preload /> 
               </video>
             </div>
 
             <div class="col-lg-6 mt-4">
               <video controls width="100%" height="100%" autoplay loop  preload>
-                <source src="img/index.html - hacathon v-2 - Visual Studio Code 2023-10-06 10-06-13.mp4" type="video/webm"   />
-                <source src="img/index.html - hacathon v-2 - Visual Studio Code 2023-10-06 10-06-13.mp4" type="video/mp4"   preload /> 
+                <source src="index.html - hacathon v-2 - Visual Studio Code 2023-10-06 10-06-13.mp4" type="video/webm"   />
+                <source src="index.html - hacathon v-2 - Visual Studio Code 2023-10-06 10-06-13.mp4" type="video/mp4"   preload /> 
               </video>
 
 
@@ -294,8 +294,8 @@
 
             <div class="col-lg-6 mt-4">
               <video controls width="100%" height="100%" autoplay loop  preload>
-                <source src="img/Document - Google Chrome 2023-10-06 10-04-54.mp4" type="video/webm"   />
-                <source src="img/Document - Google Chrome 2023-10-06 10-04-54.mp4" type="video/mp4"   preload /> 
+                <source src="Document - Google Chrome 2023-10-06 10-04-54.mp4" type="video/webm"   />
+                <source src="Document - Google Chrome 2023-10-06 10-04-54.mp4" type="video/mp4"   preload /> 
               </video>
 
             </div>
