--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <img src="img/contact.svg" alt="contact" class="img-fluid">
+            <img src="contact.svg" alt="contact" class="img-fluid">
           </div>
           <div class="col-lg-6">
 
