--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             </div>
 
             <div class="col-lg-6 mt-4">
-             <a href="https://akberqureshi361.github.io/ahadQureshi/"> <img src="galaxypic.png" alt="galaxyanimation" class="img-fluid"></a>
+             <a href="https://akberqureshi361.github.io/ahadQureshi/"> <img src="Screenshot 2023-10-22 153652.png" alt="galaxyanimation" class="img-fluid"></a>
 
             </div>
             
