--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <P>Fronted Developers at Gomium It Soloution PVT. LTD</P>
                 <p>"I'm [Ahad Developer], a [ Fronted Developer] enthusiast with 7 months of experience. I'm dedicated, creative, and always eager to learn."</p>
                 <div class="mt-5">
-                <a class="btn2 me-3" href="ahad qureshi (4).pdf"  download="ahad qureshi (5)(1).pdf">Download CV</a>
+                <a class="btn2 me-3" href="ahad qureshi (5)(1).pdf"  download="ahad qureshi (5)(1).pdf">Download CV</a>
                 <a href="tel:6395130944" class="btn " type="submit">Let's Talk</a>
                </div>
             </div>
